--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <img src= "C:\\Users\LaSha\Desktop\lashanti.jpg"
 
-<p> My nme is Lashanti Jones. Hello.</p>
+<p> My name is Lashanti Jones. Hello.</p>
 
 
 </body>
